vaultwarden/ns.yml
apiVersion: v1
kind: Namespace
metadata:
  name: vaultwarden
  annotations:
    linkerd.io/inject: enabled
