vaultwarden/ingressroute.yml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: vaultwarden
  namespace: vaultwarden
spec:
  entryPoints:
    - web
    - websecure
  routes:
  - kind: Rule
    match: Host(`vault.claytonc.dev`)
    services:
    - kind: Service
      name: vaultwarden
      port: 80
      responseForwarding:
        flushInterval: 1ms
  tls:
    secretName: vaultwarden-tls
